package(default_visibility = ["//visibility:public"])

OC3 = "//hack/bin:oc3"

KUBECTL = "//hack/bin:kubectl"

sh_binary(
    name = "create-openshift3",
    srcs = ["create-openshift3.sh"],
    args = [
        "$(location %s)" % OC3,
        "$(location %s)" % KUBECTL,
    ],
    data = [
        OC3,
        KUBECTL,
    ],
)

filegroup(
    name = "package-srcs",
    srcs = glob(["**"]),
    tags = ["automanaged"],
    visibility = ["//visibility:private"],
)

filegroup(
    name = "all-srcs",
    srcs = [":package-srcs"],
    tags = ["automanaged"],
    visibility = ["//visibility:public"],
)
