load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "go_default_library",
    srcs = ["main.go"],
    importpath = "github.com/cert-manager/cert-manager/hack/extractcrd",
    visibility = ["//visibility:private"],
    deps = [
        "@io_k8s_apiextensions_apiserver//pkg/apis/apiextensions:go_default_library",
        "@io_k8s_apiextensions_apiserver//pkg/apis/apiextensions/install:go_default_library",
        "@io_k8s_apimachinery//pkg/runtime:go_default_library",
        "@io_k8s_apimachinery//pkg/runtime/serializer:go_default_library",
    ],
)

go_binary(
    name = "extractcrd",
    embed = [":go_default_library"],
    visibility = ["//visibility:public"],
)

filegroup(
    name = "package-srcs",
    srcs = glob(["**"]),
    tags = ["automanaged"],
    visibility = ["//visibility:private"],
)

filegroup(
    name = "all-srcs",
    srcs = [":package-srcs"],
    tags = ["automanaged"],
    visibility = ["//visibility:public"],
)
