load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "go_default_library",
    srcs = [
        "convert.go",
        "ingress.go",
        "v1.go",
        "v1beta1.go",
    ],
    importpath = "github.com/cert-manager/cert-manager/internal/ingress",
    visibility = ["//visibility:public"],
    deps = [
        "//pkg/controller:go_default_library",
        "@io_k8s_api//core/v1:go_default_library",
        "@io_k8s_api//networking/v1:go_default_library",
        "@io_k8s_api//networking/v1beta1:go_default_library",
        "@io_k8s_apimachinery//pkg/apis/meta/v1:go_default_library",
        "@io_k8s_apimachinery//pkg/conversion:go_default_library",
        "@io_k8s_apimachinery//pkg/labels:go_default_library",
        "@io_k8s_apimachinery//pkg/util/intstr:go_default_library",
        "@io_k8s_client_go//discovery:go_default_library",
        "@io_k8s_client_go//kubernetes:go_default_library",
        "@io_k8s_client_go//listers/networking/v1:go_default_library",
        "@io_k8s_client_go//listers/networking/v1beta1:go_default_library",
        "@io_k8s_client_go//tools/cache:go_default_library",
    ],
)

go_test(
    name = "go_default_test",
    srcs = [
        "convert_test.go",
        "ingress_test.go",
    ],
    embed = [":go_default_library"],
    deps = [
        "//pkg/controller:go_default_library",
        "//test/unit/discovery:go_default_library",
        "@com_github_google_gofuzz//:go_default_library",
        "@com_github_stretchr_testify//assert:go_default_library",
        "@io_k8s_api//networking/v1:go_default_library",
        "@io_k8s_api//networking/v1beta1:go_default_library",
        "@io_k8s_apimachinery//pkg/apis/meta/v1:go_default_library",
        "@io_k8s_apimachinery//pkg/labels:go_default_library",
        "@io_k8s_apimachinery//pkg/runtime/schema:go_default_library",
        "@io_k8s_apimachinery//pkg/util/intstr:go_default_library",
        "@io_k8s_client_go//informers:go_default_library",
        "@io_k8s_client_go//kubernetes/fake:go_default_library",
        "@io_k8s_utils//pointer:go_default_library",
    ],
)

filegroup(
    name = "package-srcs",
    srcs = glob(["**"]),
    tags = ["automanaged"],
    visibility = ["//visibility:private"],
)

filegroup(
    name = "all-srcs",
    srcs = [":package-srcs"],
    tags = ["automanaged"],
    visibility = ["//visibility:public"],
)
