load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "go_default_library",
    srcs = ["plugins.go"],
    importpath = "github.com/cert-manager/cert-manager/internal/plugin",
    visibility = ["//:__subpackages__"],
    deps = [
        "//internal/plugin/admission/apideprecation:go_default_library",
        "//internal/plugin/admission/certificaterequest/approval:go_default_library",
        "//internal/plugin/admission/certificaterequest/identity:go_default_library",
        "//internal/plugin/admission/resourcevalidation:go_default_library",
        "//pkg/webhook/admission:go_default_library",
        "@io_k8s_apimachinery//pkg/util/sets:go_default_library",
    ],
)

filegroup(
    name = "package-srcs",
    srcs = glob(["**"]),
    tags = ["automanaged"],
    visibility = ["//visibility:private"],
)

filegroup(
    name = "all-srcs",
    srcs = [
        ":package-srcs",
        "//internal/plugin/admission/apideprecation:all-srcs",
        "//internal/plugin/admission/certificaterequest/approval:all-srcs",
        "//internal/plugin/admission/certificaterequest/identity:all-srcs",
        "//internal/plugin/admission/resourcevalidation:all-srcs",
    ],
    tags = ["automanaged"],
    visibility = ["//visibility:public"],
)
