load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "go_default_library",
    srcs = [
        "scheme.go",
        "webhook.go",
    ],
    importpath = "github.com/cert-manager/cert-manager/internal/webhook",
    visibility = ["//:__subpackages__"],
    deps = [
        "//cmd/webhook/app/options:go_default_library",
        "//internal/apis/acme/install:go_default_library",
        "//internal/apis/certmanager/install:go_default_library",
        "//internal/apis/config/webhook:go_default_library",
        "//internal/apis/meta/install:go_default_library",
        "//internal/plugin:go_default_library",
        "//pkg/logs:go_default_library",
        "//pkg/webhook/admission:go_default_library",
        "//pkg/webhook/admission/initializer:go_default_library",
        "//pkg/webhook/authority:go_default_library",
        "//pkg/webhook/handlers:go_default_library",
        "//pkg/webhook/server:go_default_library",
        "//pkg/webhook/server/tls:go_default_library",
        "@com_github_go_logr_logr//:go_default_library",
        "@io_k8s_apimachinery//pkg/runtime:go_default_library",
        "@io_k8s_apimachinery//pkg/util/wait:go_default_library",
        "@io_k8s_apiserver//pkg/authorization/authorizerfactory:go_default_library",
        "@io_k8s_client_go//kubernetes:go_default_library",
        "@io_k8s_client_go//rest:go_default_library",
        "@io_k8s_client_go//tools/clientcmd:go_default_library",
    ],
)

filegroup(
    name = "package-srcs",
    srcs = glob(["**"]),
    tags = ["automanaged"],
    visibility = ["//visibility:private"],
)

filegroup(
    name = "all-srcs",
    srcs = [
        ":package-srcs",
        "//internal/webhook/feature:all-srcs",
    ],
    tags = ["automanaged"],
    visibility = ["//visibility:public"],
)
