load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "go_default_library",
    srcs = [
        "cache.go",
        "helper.go",
        "util.go",
    ],
    importpath = "github.com/jetstack/cert-manager/pkg/acme",
    visibility = ["//visibility:public"],
    deps = [
        "//pkg/acme/client:go_default_library",
        "//pkg/acme/client/middleware:go_default_library",
        "//pkg/api/util:go_default_library",
        "//pkg/apis/acme/v1alpha2:go_default_library",
        "//pkg/apis/certmanager/v1alpha2:go_default_library",
        "//pkg/apis/meta/v1:go_default_library",
        "//pkg/util:go_default_library",
        "//pkg/util/errors:go_default_library",
        "//pkg/util/pki:go_default_library",
        "@io_k8s_api//core/v1:go_default_library",
        "@io_k8s_client_go//listers/core/v1:go_default_library",
        "@org_golang_x_crypto//acme:go_default_library",
    ],
)

filegroup(
    name = "package-srcs",
    srcs = glob(["**"]),
    tags = ["automanaged"],
    visibility = ["//visibility:private"],
)

filegroup(
    name = "all-srcs",
    srcs = [
        ":package-srcs",
        "//pkg/acme/client:all-srcs",
        "//pkg/acme/fake:all-srcs",
        "//pkg/acme/webhook:all-srcs",
    ],
    tags = ["automanaged"],
    visibility = ["//visibility:public"],
)
