load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "go_default_library",
    srcs = ["util.go"],
    importpath = "github.com/cert-manager/cert-manager/pkg/acme",
    visibility = ["//visibility:public"],
    deps = [
        "//pkg/apis/acme/v1:go_default_library",
        "//pkg/apis/meta/v1:go_default_library",
        "@io_k8s_api//core/v1:go_default_library",
    ],
)

filegroup(
    name = "package-srcs",
    srcs = glob(["**"]),
    tags = ["automanaged"],
    visibility = ["//visibility:private"],
)

filegroup(
    name = "all-srcs",
    srcs = [
        ":package-srcs",
        "//pkg/acme/accounts:all-srcs",
        "//pkg/acme/client:all-srcs",
        "//pkg/acme/util:all-srcs",
        "//pkg/acme/webhook:all-srcs",
    ],
    tags = ["automanaged"],
    visibility = ["//visibility:public"],
)
