load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "go_default_library",
    srcs = ["scheme.go"],
    importpath = "github.com/jetstack/cert-manager/pkg/api",
    visibility = ["//visibility:public"],
    deps = [
        "//pkg/acme/webhook/apis/acme/v1alpha1:go_default_library",
        "//pkg/apis/acme/v1:go_default_library",
        "//pkg/apis/acme/v1alpha2:go_default_library",
        "//pkg/apis/acme/v1alpha3:go_default_library",
        "//pkg/apis/acme/v1beta1:go_default_library",
        "//pkg/apis/certmanager/v1:go_default_library",
        "//pkg/apis/certmanager/v1alpha2:go_default_library",
        "//pkg/apis/certmanager/v1alpha3:go_default_library",
        "//pkg/apis/certmanager/v1beta1:go_default_library",
        "//pkg/apis/meta/v1:go_default_library",
        "@io_k8s_apiextensions_apiserver//pkg/apis/apiextensions/v1:go_default_library",
        "@io_k8s_apimachinery//pkg/apis/meta/v1:go_default_library",
        "@io_k8s_apimachinery//pkg/runtime:go_default_library",
        "@io_k8s_apimachinery//pkg/runtime/schema:go_default_library",
        "@io_k8s_apimachinery//pkg/runtime/serializer:go_default_library",
        "@io_k8s_apimachinery//pkg/util/runtime:go_default_library",
        "@io_k8s_client_go//kubernetes/scheme:go_default_library",
        "@io_k8s_kube_aggregator//pkg/apis/apiregistration/v1:go_default_library",
    ],
)

filegroup(
    name = "package-srcs",
    srcs = glob(["**"]),
    tags = ["automanaged"],
    visibility = ["//visibility:private"],
)

filegroup(
    name = "all-srcs",
    srcs = [
        ":package-srcs",
        "//pkg/api/testing:all-srcs",
        "//pkg/api/util:all-srcs",
    ],
    tags = ["automanaged"],
    visibility = ["//visibility:public"],
)
