load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "go_default_library",
    srcs = [
        "base_controller.go",
        "context.go",
        "helper.go",
        "register.go",
        "util.go",
    ],
    importpath = "github.com/jetstack/cert-manager/pkg/controller",
    visibility = ["//visibility:public"],
    deps = [
        "//pkg/apis/certmanager/v1alpha1:go_default_library",
        "//pkg/client/clientset/versioned:go_default_library",
        "//pkg/client/informers/externalversions:go_default_library",
        "//pkg/logs:go_default_library",
        "//vendor/github.com/go-logr/logr:go_default_library",
        "//vendor/k8s.io/apimachinery/pkg/api/resource:go_default_library",
        "//vendor/k8s.io/apimachinery/pkg/apis/meta/v1:go_default_library",
        "//vendor/k8s.io/apimachinery/pkg/runtime/schema:go_default_library",
        "//vendor/k8s.io/apimachinery/pkg/util/runtime:go_default_library",
        "//vendor/k8s.io/apimachinery/pkg/util/wait:go_default_library",
        "//vendor/k8s.io/client-go/informers:go_default_library",
        "//vendor/k8s.io/client-go/kubernetes:go_default_library",
        "//vendor/k8s.io/client-go/rest:go_default_library",
        "//vendor/k8s.io/client-go/tools/cache:go_default_library",
        "//vendor/k8s.io/client-go/tools/record:go_default_library",
        "//vendor/k8s.io/client-go/util/workqueue:go_default_library",
        "//vendor/k8s.io/utils/clock:go_default_library",
    ],
)

filegroup(
    name = "package-srcs",
    srcs = glob(["**"]),
    tags = ["automanaged"],
    visibility = ["//visibility:private"],
)

filegroup(
    name = "all-srcs",
    srcs = [
        ":package-srcs",
        "//pkg/controller/acmechallenges:all-srcs",
        "//pkg/controller/acmeorders:all-srcs",
        "//pkg/controller/cainjector:all-srcs",
        "//pkg/controller/certificaterequests:all-srcs",
        "//pkg/controller/certificates:all-srcs",
        "//pkg/controller/clusterissuers:all-srcs",
        "//pkg/controller/ingress-shim:all-srcs",
        "//pkg/controller/issuers:all-srcs",
        "//pkg/controller/test:all-srcs",
        "//pkg/controller/webhookbootstrap:all-srcs",
    ],
    tags = ["automanaged"],
    visibility = ["//visibility:public"],
)

go_test(
    name = "go_default_test",
    srcs = ["helper_test.go"],
    embed = [":go_default_library"],
    deps = [
        "//pkg/apis/certmanager/v1alpha1:go_default_library",
        "//vendor/k8s.io/apimachinery/pkg/apis/meta/v1:go_default_library",
    ],
)
